update: updated color scheme and some css for scrollbar, nav updates incoming

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -1,3 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Allows scrolling but hides the scrollbar */
+html,
+body {
+  overflow: hidden;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: #1a1a2e;
+  color: #e0e7ff;
+  overflow-y: scroll;
+}
+
+body::-webkit-scrollbar {
+  display: none; /* Hide the scrollbar on Chrome */
+}
+
+body {
+  -ms-overflow-style: none; /* IE and Edge */
+}
+
+html {
+  scrollbar-width: none; /* Firefox */
+}
