--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -43,28 +43,13 @@ html {
   bottom: 0;
   width: 100%;
   height: 4rem;
-  /* background: linear-gradient(to bottom, transparent, #000000); */
   z-index: -1;
 }
 
 .section:nth-child(even) {
   background: linear-gradient(180deg, rgba(97,179,244,1) 0%, rgba(157,217,243,1) 58%, rgba(209,244,251,1) 100%);
-  /* background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(115,213,255,1) 51%, rgba(0,0,0,1) 100%); */
-  /* background: linear-gradient(180deg, rgba(60,95,102,1) 0%, rgba(115,213,255,1) 51%, rgba(47,77,85,1) 100%); */
 }
 
 .section:nth-child(odd) {
-  background-color: #FFB6C1;
-}
-
-.section:nth-child(3n) {
-  background-color: #C3B5FF;
-}
-
-.section:nth-child(odd)::after {
-  background: linear-gradient(to bottom, transparent, #FFB6C1);
-}
-
-.section:nth-child(3n)::after {
-  background: linear-gradient(to bottom, transparent, #C3B5FF);
+  background: linear-gradient(180deg, rgba(254,120,159,1) 0%, rgba(255,182,193,1) 51%, rgba(254,213,240,1) 100%);
 }
