--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -12,7 +12,12 @@ body {
 }
 
 body {
-  background: linear-gradient(270deg, rgba(0,0,0,1) 0%, rgba(20,20,20,1) 51%, rgba(30,30,30,1) 100%);
+  background: linear-gradient(
+    270deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(20, 20, 20, 1) 51%,
+    rgba(30, 30, 30, 1) 100%
+  );
   color: #ffffff;
   overflow-y: scroll;
   overflow-x: hidden;
@@ -32,24 +37,24 @@ html {
 
 .section {
   position: relative;
-  padding: 4rem 1rem;
+  padding: 0rem 1rem;
   z-index: 0;
 }
 
-.section::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 4rem;
-  z-index: -1;
-}
-
 .section:nth-child(even) {
-  background: linear-gradient(270deg, rgba(97,179,244,1) 0%, rgba(157,217,243,1) 58%, rgba(209,244,251,1) 100%);
+  background: linear-gradient(
+    270deg,
+    rgba(97, 179, 244, 1) 0%,
+    rgba(157, 217, 243, 1) 58%,
+    rgba(209, 244, 251, 1) 100%
+  );
 }
 
 .section:nth-child(odd) {
-  background: linear-gradient(270deg, rgba(254,120,159,1) 0%, rgba(255,182,193,1) 51%, rgba(254,213,240,1) 100%);
+  background: linear-gradient(
+    270deg,
+    rgba(254, 120, 159, 1) 0%,
+    rgba(255, 182, 193, 1) 51%,
+    rgba(254, 213, 240, 1) 100%
+  );
 }
