update: updated navbar links to be more visible

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -58,3 +58,8 @@ html {
     rgba(254, 213, 240, 1) 100%
   );
 }
+
+.text-neon {
+  text-shadow: 0 0 5px rgba(255, 182, 193, 1), 0 0 10px rgba(255, 182, 193, 1),
+    0 0 15px rgba(255, 182, 193, 1), 0 0 20px rgb(243, 112, 132);
+}
